1-Briqueta de 10kg.html

--- a/1-Briqueta de 10kg.html
+++ b/1-Briqueta de 10kg.html
@@ -58,8 +58,8 @@
         <div class="intro-text">
           <h1>Briqueta de 10kg</h1>
           <p>
-            En <strong>Briquetas la Milagrito</strong>entendemos que nuestro éxito está intrínsecamente ligado al bienestar del planeta y de nuestra comunidad. Por eso, la Responsabilidad Social Empresarial (RSE) no es solo una política, es el núcleo de nuestras operaciones. 
-A través de iniciativas como nuestro "Vivero la Milagrito", estamos activamente comprometidos con la reforestación y la producción sostenible, asegurando que cada producto que ofrecemos contribuya a un mundo más verde. 
+            En <strong>El Samba</strong>Desarrollar soluciones ecológicas y alimenticias a partir del coco, transformando tanto sus subproductos como su fruto en productos innovadores, seguros y ambientalmente responsables. Operamos bajo principios legales, sanitarios y de sostenibilidad, impulsando cadenas de valor locales y promoviendo un modelo empresarial circular.
+ 
 
           </p>
         </div>
