1-Quienes Somos.html

--- a/1-Quienes Somos.html
+++ b/1-Quienes Somos.html
@@ -58,7 +58,7 @@
         <div class="intro-text">
           <h1>Sobre Nosotros</h1>
           <p>
-            En <strong>Briquetas la Milagrito</strong> somos una empresa comprometida con el medio ambiente 
+            En <strong>El Samba</strong> somos una empresa comprometida con el medio ambiente 
             y la producción sostenible de briquetas de carbón ecológicas logramos  
             ofrecer productos de alta calidad que ayuden a reducir 
             el impacto ambiental y mejoren la eficiencia energética.
