1-Quienes Somos.html

--- a/1-Quienes Somos.html
+++ b/1-Quienes Somos.html
@@ -58,10 +58,17 @@
         <div class="intro-text">
           <h1>Sobre Nosotros</h1>
           <p>
-            En <strong>El Samba</strong> somos una empresa comprometida con el medio ambiente 
-            y la producción sostenible de briquetas de carbón ecológicas logramos  
-            ofrecer productos de alta calidad que ayuden a reducir 
-            el impacto ambiental y mejoren la eficiencia energética.
+            <strong>El Samba</strong> es una empresa dedicada a desarrollar soluciones ecológicas
+            y alimenticias a partir del coco, transformando su fruto y 
+            sus subproductos en alternativas innovadoras, seguras y responsables
+            con el ambiente. Operamos bajo principios legales, sanitarios y 
+            de sostenibilidad, fortaleciendo cadenas de valor locales 
+            y promoviendo un modelo empresarial circular.
+
+            Aspiramos a consolidarnos como referente en Nicaragua y Centroamérica
+            en la transformación integral del coco, ofreciendo productos
+            de calidad reconocidos por su innovación, 
+            responsabilidad ambiental y cumplimiento normativo.
           </p>
         </div>
         <div class="intro-image">
@@ -77,20 +84,23 @@
         <article class="bloque card">
           <h2>Misión</h2>
           <p>
-            Producir briquetas de carbón ecológicas 
-            que brinden una alternativa limpia y eficiente 
-            al consumo de leña o carbón tradicional, promoviendo 
-            la sostenibilidad ambiental 
-            y el desarrollo económico local.
+           Desarrollar soluciones ecológicas y alimenticias
+            a partir del coco, transformando tanto sus subproductos
+            como su fruto en productos innovadores, seguros y
+            ambientalmente responsables. Operamos bajo principios legales, 
+            sanitarios y de sostenibilidad, impulsando cadenas de valor locales
+            y promoviendo un modelo empresarial circular.
+
           </p>
         </article>
         <article class="bloque card">
           <h2>Visión</h2>
           <p>
-            Ser líderes en la región en la producción de
-             biocombustibles sostenibles, 
-            contribuyendo al bienestar del planeta 
-            y a la economía circular.
+           Ser la empresa líder en Nicaragua y Centroamérica en 
+            la transformación integral del coco ofreciendo productos
+            ecológicos y alimenticios de alta calidad, reconocidos 
+            por su innovación, responsabilidad ambiental y cumplimiento normativo.
+
           </p>
         </article>
       </div>
