--- a/1-Quienes Somos.html
+++ b/1-Quienes Somos.html
@@ -127,10 +127,10 @@
       <div class="redes">
         <h3>También puedes encontrarnos en:</h3>
         <div class="iconos-redes">
-          <a href="https://www.facebook.com/share/1A9APGk63H/" target="_blank" class="facebook" rel="noopener noreferrer">
+          <a href="https://www.facebook.com/share/1JSoCyuENb/" target="_blank" class="facebook" rel="noopener noreferrer">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://api.whatsapp.com/send?phone=50581827412" target="_blank" class="whatsapp" rel="noopener noreferrer">
+          <a href="https://api.whatsapp.com/send?phone=50588197679" target="_blank" class="whatsapp" rel="noopener noreferrer">
             <i class="fab fa-whatsapp"></i>
           </a>
         </div>
@@ -140,7 +140,7 @@
 
   <!-- ======== PIE DE PÁGINA ======== -->
   <footer>
-    <p>&copy; 2025 Briquetas la Milagrito. Todos los derechos reservados.</p>
+    <p>&copy; 2026 El SAMBA. Todos los derechos reservados.</p>
   </footer>
 
   <script src="script.js" defer></script>
