1-Quienes Somos.html

--- a/1-Quienes Somos.html
+++ b/1-Quienes Somos.html
@@ -113,9 +113,9 @@
         <h2>Nuestros Valores</h2>
         <ul class="valores-list">
           <li>Compromiso ambiental</li>
-          <li>Honestidad y transparencia</li>
-          <li>Innovación constante</li>
-          <li>Trabajo en equipo</li>
+          <li>Responsabilidad</li>
+          <li>Integridad</li>
+          <li>Calidad</li>
         </ul>
       </div>
     </section>
