Descripción de los cambios

--- a/3-Productos.Html
+++ b/3-Productos.Html
@@ -90,10 +90,10 @@
       <div class="redes">
         <h3>También puedes encontrarnos en:</h3>
         <div class="iconos-redes">
-          <a href="https://www.facebook.com/share/1A9APGk63H/" target="_blank" class="facebook" rel="noopener noreferrer">
+          <a href="https://www.facebook.com/share/1JSoCyuENb/" target="_blank" class="facebook" rel="noopener noreferrer">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://api.whatsapp.com/send?phone=50581827412" target="_blank" class="whatsapp" rel="noopener noreferrer">
+          <a href="https://api.whatsapp.com/send?phone=50588197679" target="_blank" class="whatsapp" rel="noopener noreferrer">
             <i class="fab fa-whatsapp"></i>
           </a>
         </div>
