--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   
   <!-- Para que el logo aparezca en la pestaña de busqueda lit gozalo jskdjas esta quedando cool xd -->
-  <link rel="icon" type="image/png" href="proyecto/img/LOGO REAL.png">
+  <link rel="icon" type="image/png" href="imagenes/tamal.png">
 
 </head>
 
@@ -20,7 +20,7 @@
   <header>
     <!-- Aqui gonzalo es para que el logo aparezca en la barra de arriba y que al tocarlo se devuelva al inicio xd-->
     <a href="index.html" class="logo">
-  <img src="proyecto/img/LOGO REAL.png" alt="Briquetas la Milagrito">
+  <img src="imagenes/tamal.png" alt="Briquetas la Milagrito">
 </a>
 <nav id="nav-menu" aria-label="Navegación principal">
     <ul>
@@ -55,7 +55,7 @@
     <section class="hero">
       <div class="hero-content">
         <h1>Carbón ecológico de alta calidad</h1>
-        <p>Fabricamos briquetas sostenibles, eficientes y comprometidas con el medio ambiente.</p>
+        <p>Productos Naturales para consumo Humano y uso Agricola a base de coco.</p>
         <a href="3-Productos.Html" class="btn">Ver productos</a>
       </div>
     </section>
@@ -64,8 +64,8 @@
     <section class="features">
       <h2 class="visually-hidden">Nuestras Características</h2>
       <article class="feature">
-        <img src="proyecto/img/Viverolamilagrito.jpg" alt="Icono de una hoja representando lo ecológico" />
-        <h3>Ecológico</h3>
+        <img src="imagenes/botella.jpg" alt="Icono de una hoja representando lo ecológico" />
+        <h3>Natural</h3>
         <p>Producidas a partir de residuos vegetales sin químicos dañinos.</p>
       </article>
       <article class="feature">
@@ -85,10 +85,10 @@
       <h2>De la montaña a la ciudad somos calidad</h2>
       <a href="4-Contactenos.Html" class="btn btn-light">Contáctenos</a>
       
-      <a href="https://www.facebook.com/share/1A9APGk63H/" target="_blank" class="btn btn-light" rel="noopener noreferrer">
+      <a href="https://www.facebook.com/share/1JSoCyuENb/" target="_blank" class="btn btn-light" rel="noopener noreferrer">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://api.whatsapp.com/send?phone=50581827412" target="_blank" class="btn btn-light" rel="noopener noreferrer">
+          <a href="https://api.whatsapp.com/send?phone=50588197679" target="_blank" class="btn btn-light" rel="noopener noreferrer">
             <i class="fab fa-whatsapp"></i>
           </a>
         </div>
