--- a/1-Quienes Somos.html
+++ b/1-Quienes Somos.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quienes Somos | Briquetas la Milagrito</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Inicio | Briquetas la milagrito</title>
+  <link rel="stylesheet" href="styles.css" />
    <!--esto de aqui es para que salgan los link de las redes sociales-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
   
   <!-- Para que el logo aparezca en la pestaña de busqueda lit gozalo jskdjas esta quedando cool xd -->
-  <link rel="icon" type="image/png" href="proyecto/img/LOGO REAL.png">
-
+  <link rel="icon" type="image/png" href="imagenes/tamal.png">
 
 </head>
+
 <body>
 
   <!-- ======== ENCABEZADO ======== -->
   <header>
-    
     <!-- Aqui gonzalo es para que el logo aparezca en la barra de arriba y que al tocarlo se devuelva al inicio xd-->
     <a href="index.html" class="logo">
-  <img src="proyecto/img/LOGO REAL.png" alt="Briquetas la Milagrito">
+  <img src="imagenes/tamal.png" alt="Briquetas la Milagrito">
 </a>
 <nav id="nav-menu" aria-label="Navegación principal">
     <ul>
