--- a/4-Contactenos.Html
+++ b/4-Contactenos.Html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contáctenos | Briquetas la Milagrito</title>
-  <link rel="stylesheet" href="styles.css">
-  <!--esto de aqui es para que salgan los link de las redes sociales-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Inicio | Briquetas la milagrito</title>
+  <link rel="stylesheet" href="styles.css" />
+   <!--esto de aqui es para que salgan los link de las redes sociales-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
   
   <!-- Para que el logo aparezca en la pestaña de busqueda lit gozalo jskdjas esta quedando cool xd -->
-  <link rel="icon" type="image/png" href="proyecto/img/LOGO REAL.png">
+  <link rel="icon" type="image/png" href="imagenes/tamal.png">
+
 </head>
+
 <body>
 
   <!-- ======== ENCABEZADO ======== -->
   <header>
-    
     <!-- Aqui gonzalo es para que el logo aparezca en la barra de arriba y que al tocarlo se devuelva al inicio xd-->
     <a href="index.html" class="logo">
-  <img src="proyecto/img/LOGO REAL.png" alt="Briquetas la Milagrito">
+  <img src="imagenes/tamal.png" alt="Briquetas la Milagrito">
 </a>
+
 <nav id="nav-menu" aria-label="Navegación principal">
     <ul>
         <li><a href="index.html">Inicio</a></li>
@@ -75,15 +78,14 @@
       <div class="redes">
         <h3>También puedes encontrarnos en:</h3>
         <div class="iconos-redes">
-          <a href="https://www.facebook.com/share/1A9APGk63H/" target="_blank" class="facebook" rel="noopener noreferrer">
+          <a href="https://www.facebook.com/share/1JSoCyuENb/" target="_blank" class="facebook" rel="noopener noreferrer">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://api.whatsapp.com/send?phone=50581827412" target="_blank" class="whatsapp" rel="noopener noreferrer">
+          <a href="https://api.whatsapp.com/send?phone=50588197679" target="_blank" class="whatsapp" rel="noopener noreferrer">
             <i class="fab fa-whatsapp"></i>
           </a>
         </div>
       </div>
-    </section>
 
   </main>
 
