--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <!-- ======== PIE DE PÁGINA ======== -->
   <footer>
-    <p>&copy; 2025 Briquetas la Milagrito . Todos los derechos reservados.</p>
+    <p>&copy; 2026 El SAMBA . Todos los derechos reservados.</p>
   </footer>
 
   <script src="script.js" defer></script>
