--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- ======== SECCIÓN PRINCIPAL (HERO) ======== -->
     <section class="hero">
       <div class="hero-content">
-        <h1>Carbón ecológico de alta calidad</h1>
+        <h1>Comprometidos con Futuro Sostenible</h1>
         <p>Productos Naturales para consumo Humano y uso Agricola a base de coco.</p>
         <a href="3-Productos.Html" class="btn">Ver productos</a>
       </div>
@@ -66,17 +66,17 @@
       <article class="feature">
         <img src="imagenes/botella.jpg" alt="Icono de una hoja representando lo ecológico" />
         <h3>Natural</h3>
-        <p>Producidas a partir de residuos vegetales sin químicos dañinos.</p>
+        <p>Producidos sin químicos dañinos.</p>
       </article>
       <article class="feature">
         <img src="proyecto/img/EfectoCalorifico.jpg" alt="Icono de un rayo representando la eficiencia" />
-        <h3>Eficiente</h3>
-        <p>Mayor poder calorífico y menor emisión de humo.</p>
+        <h3>Eco-amigables</h3>
+        <p>Ponemos en practica la economia circular.</p>
       </article>
       <article class="feature">
         <img src="proyecto/img/Certificadomejor.jpg" alt="Icono de un sello de aprobación representando la calidad" />
-        <h3>Certificado</h3>
-        <p>Cumple con estándares exigidos por mercados internacionales.</p>
+        <h3>Sustentables</h3>
+        <p>Apoyamos la producion y Consumo de Materia prima Nacional.</p>
       </article>
     </section>
 
