--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section class="hero">
       <div class="hero-content">
         <h1>Comprometidos con Futuro Sostenible</h1>
-        <p>Productos Naturales para consumo Humano y uso Agricola a base de coco.</p>
+        <p>Productos Naturales para consumo Humano y Agricola a base de coco.</p>
         <a href="3-Productos.Html" class="btn">Ver productos</a>
       </div>
     </section>
