--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p>Producidos sin químicos dañinos.</p>
       </article>
       <article class="feature">
-        <img src="proyecto/img/EfectoCalorifico.jpg" alt="Icono de un rayo representando la eficiencia" />
+        <img src="imagenes/Cocos producion.jpg" alt="Icono de un rayo representando la eficiencia" />
         <h3>Eco-amigables</h3>
         <p>Ponemos en practica la economia circular.</p>
       </article>
