--- a/1-Quienes Somos.html
+++ b/1-Quienes Somos.html
@@ -35,9 +35,9 @@
         Productos <i class="fas fa-chevron-down"></i>
     </a>
     <ul class="dropdown-menu">
-        <li><a href="1-Briqueta de 10kg.html">Briqueta de 10kg</a></li>
-        <li><a href="2-Carbon Vegetal 25kg.html">Carbón Vegetal 25kg</a></li>
-        <li><a href="3-Ferti Carbon.html">Ferti Carbon</a></li>
+        <li><a href="1-Briqueta de 10kg.html">Bloques de Fibra</a></li>
+        <li><a href="2-Carbon Vegetal 25kg.html">Sacos de fibra</a></li>
+        <li><a href="3-Ferti Carbon.html">Maceteras</a></li>
     </ul>
 </li>
         <!-- Fin del menú desplegable -->
@@ -74,7 +74,7 @@
         </div>
         <div class="intro-image">
           <!-- REEMPLAZA ESTA URL CON LA IMAGEN DE TU EMPRESA -->
-          <img src="proyecto/img/MARIA.jpg" alt="Imagen representativa de Briquetas la Milagrito">
+          <img src="imagenes/Samba foto de perfil.jpg" alt="Imagen representativa de Briquetas la Milagrito">
         </div>
       </div>
     </section>
