--- a/2-RSE.html
+++ b/2-RSE.html
@@ -32,15 +32,15 @@
         
         <!-- Aquí empieza el menú desplegable para "Productos" -->
         <li class="dropdown">
-          <a class="dropdown-toggle" role="button" tabindex="0">
-            Productos <i class="fas fa-chevron-down"></i>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a href="1-Briqueta de 10kg.html">Briqueta de 10kg</a></li>
-            <li><a href="2-Carbon Vegetal 25kg.html">Carbón Vegetal 25kg</a></li>
-            <li><a href="3-Ferti Carbon.html">Ferti Carbon</a></li>
-          </ul>
-        </li>
+    <a class="dropdown-toggle" role="button" tabindex="0">
+        Productos <i class="fas fa-chevron-down"></i>
+    </a>
+    <ul class="dropdown-menu">
+        <li><a href="1-Briqueta de 10kg.html">Bloques de Fibra</a></li>
+        <li><a href="2-Carbon Vegetal 25kg.html">Sacos de fibra</a></li>
+        <li><a href="3-Ferti Carbon.html">Maceteras</a></li>
+    </ul>
+</li>
         <!-- Fin del menú desplegable -->
         <li><a href="4-Contactenos.Html">Contactenos</a></li>
       </ul>
@@ -58,15 +58,15 @@
         <div class="intro-text">
           <h1>Responsabilidad Social Empresarial</h1>
           <p>
-            En <strong>Briquetas la Milagrito</strong>, nuestro compromiso va más allá de la producción de carbón de alta calidad. Creemos firmemente en un desarrollo sostenible que equilibre el crecimiento empresarial con el cuidado del medio ambiente y el bienestar de nuestra comunidad.
+            En <strong>El Samba</strong>, nuestro compromiso trasciende la elaboración de productos ecológicos y alimenticios derivados del coco. Creemos en un modelo sostenible que une innovación, responsabilidad ambiental y apoyo directo a las comunidades locales.
           </p>
           <p>
-            La reforestación es el pilar de nuestra iniciativa social. Cada árbol plantado en nuestro <strong>"Vivero la Milagrito"</strong> es un paso hacia la restauración de ecosistemas, la captura de carbono de la atmósfera y la protección de la biodiversidad local. Al invertir en la naturaleza, no solo compensamos nuestro impacto ambiental, sino que también garantizamos un futuro más verde y saludable para las próximas generaciones.
+            El aprovechamiento integral del coco es el eje de nuestra iniciativa social y ambiental. Cada fibra, cada subproducto y cada fruto transformado representa un paso hacia la reducción de residuos, el impulso de la economía circular y la creación de oportunidades para productores locales. Al trabajar con procesos responsables y eficientes, contribuimos a un entorno más limpio, productivo y saludable para las generaciones futuras.
           </p>
         </div>
         <div class="intro-image">
           <!-- REEMPLAZA ESTA URL CON LA IMAGEN DE TU EMPRESA -->
-          <img src="proyecto/img/Viverolamilagrito.jpg" alt="Imagen del Vivero La Milagrito, iniciativa de reforestación de Briquetas la Milagrito">
+          <img src="imagenes/cocos germinando.jpg" alt="Imagen del Vivero La Milagrito, iniciativa de reforestación de Briquetas la Milagrito">
         </div>
       </div>
     </section>
