--- a/3-Productos.Html
+++ b/3-Productos.Html
@@ -35,9 +35,9 @@
         Productos <i class="fas fa-chevron-down"></i>
     </a>
     <ul class="dropdown-menu">
-        <li><a href="1-Briqueta de 10kg.html">Briqueta de 10kg</a></li>
-        <li><a href="2-Carbon Vegetal 25kg.html">Carbón Vegetal 25kg</a></li>
-        <li><a href="3-Ferti Carbon.html">Ferti Carbon</a></li>
+        <li><a href="1-Briqueta de 10kg.html">Bloques de Fibra</a></li>
+        <li><a href="2-Carbon Vegetal 25kg.html">Sacos de fibra</a></li>
+        <li><a href="3-Ferti Carbon.html">Maceteras</a></li>
     </ul>
 </li>
 <!-- Fin del menú desplegable -->
@@ -59,27 +59,27 @@
         <!-- Producto 1 -->
         <a href="productos/1-Briqueta de 10kg.html" class="product-link">
           <article class="product-card" itemscope itemtype="http://schema.org/Product">
-            <img src="proyecto/img/Briquetas0.jpg" alt="Foto de la Briqueta Estándar" itemprop="image" />
-            <h2 itemprop="name">Briqueta de 10kg</h2>
-            <p itemprop="description">Eficiente y duradera. Ideal para hogares y restaurantes.</p>
+            <img src="imagenes/semilleros.jpg" alt="Foto de la Briqueta Estándar" itemprop="image" />
+            <h2 itemprop="name">Bloques de Fibra</h2>
+            <p itemprop="description">Ecelentes para semilleros y Maceteras.</p>
           </article>
         </a>
         
         <!-- Producto 2 -->
         <a href="productos/2-Carbon Vegetal 25kg.html" class="product-link">
           <article class="product-card" itemscope itemtype="http://schema.org/Product">
-            <img src="proyecto/img/Briquetas03.jpg" alt="Foto del Carbón Vegetal" itemprop="image" />
-            <h2 itemprop="name">Carbon Vegetal 25kg</h2>
-            <p itemprop="description">Mayor densidad, encendido rápido y baja emisión de humo.</p>
+            <img src="imagenes/Saco de fibra.jpg" alt="Foto del Carbón Vegetal" itemprop="image" />
+            <h2 itemprop="name">Sacos de Fibra</h2>
+            <p itemprop="description">Utiles para Hortalizas, Jardineria y plantas Hornamentales.</p>
           </article>
         </a>
         
         <!-- Producto 3 -->
         <a href="productos/3-Ferti Carbon.html" class="product-link">
           <article class="product-card" itemscope itemtype="http://schema.org/Product">
-            <img src="proyecto/img/Briquetas02.jpg" alt="Foto de Ferti Carbon" itemprop="image" />
-            <h2 itemprop="name">Ferti Carbon</h2>
-            <p itemprop="description">Calidad ambiental directa a sus manos.</p>
+            <img src="imagenes/Maceteras fibra.jpg" alt="Foto de Ferti Carbon" itemprop="image" />
+            <h2 itemprop="name">Maceteras</h2>
+            <p itemprop="description">Productos con Impacto Ambiental Positivo.</p>
           </article>
         </a>
       </div>
@@ -102,7 +102,7 @@
 
   <!-- ======== PIE DE PÁGINA ======== -->
   <footer>
-    <p>&copy; 2025 Briquetas la Milagrito. Todos los derechos reservados.</p>
+    <p>&copy; 2026 El SAMBA. Todos los derechos reservados.</p>
   </footer>
 <script src="script.js" defer></script>
 </body>
