--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         Productos <i class="fas fa-chevron-down"></i>
     </a>
     <ul class="dropdown-menu">
-        <li><a href="1-Briqueta de 10kg.html">Briqueta de 10kg</a></li>
-        <li><a href="2-Carbon Vegetal 25kg.html">Carbón Vegetal 25kg</a></li>
-        <li><a href="3-Ferti Carbon.html">Ferti Carbon</a></li>
+        <li><a href="1-Briqueta de 10kg.html">Bloques de Fibra</a></li>
+        <li><a href="2-Carbon Vegetal 25kg.html">Sacos de fibra</a></li>
+        <li><a href="3-Ferti Carbon.html">Maceteras</a></li>
     </ul>
 </li>
         <!-- Fin del menú desplegable -->
@@ -74,7 +74,7 @@
         <p>Ponemos en practica la economia circular.</p>
       </article>
       <article class="feature">
-        <img src="proyecto/img/Certificadomejor.jpg" alt="Icono de un sello de aprobación representando la calidad" />
+        <img src="imagenes/Producion Nacional.jpg" alt="Icono de un sello de aprobación representando la calidad" />
         <h3>Sustentables</h3>
         <p>Apoyamos la producion y Consumo de Materia prima Nacional.</p>
       </article>
