--- a/1-Briqueta de 10kg.html
+++ b/1-Briqueta de 10kg.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Inicio | Briquetas la milagrito</title>
+  <title>Inicio | El SAMBA</title>
   <link rel="stylesheet" href="styles.css" />
    <!--esto de aqui es para que salgan los link de las redes sociales-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -31,13 +31,13 @@
         <!-- Aquí empieza el menú desplegable para "Productos" -->
         
 <li class="dropdown">
-    <a class="dropdown-toggle active" role="button" tabindex="0">
+    <a class="dropdown-toggle" role="button" tabindex="0">
         Productos <i class="fas fa-chevron-down"></i>
     </a>
     <ul class="dropdown-menu">
-        <li><a href="1-Briqueta de 10kg.html" clase="active">Briqueta de 10kg</a></li>
-        <li><a href="2-Carbon Vegetal 25kg.html">Carbón Vegetal 25kg</a></li>
-        <li><a href="3-Ferti Carbon.html">Ferti Carbon</a></li>
+        <li><a href="1-Briqueta de 10kg.html">Bloques de Fibra</a></li>
+        <li><a href="2-Carbon Vegetal 25kg.html">Sacos de fibra</a></li>
+        <li><a href="3-Ferti Carbon.html">Maceteras</a></li>
     </ul>
 </li>
         <!-- Fin del menú desplegable -->
@@ -56,16 +56,14 @@
     <section class="intro">
       <div class="content-wrapper">
         <div class="intro-text">
-          <h1>Briqueta de 10kg</h1>
+          <h1>Sustarto De Fibra de COCO</h1>
           <p>
-            En <strong>El Samba</strong>Desarrollar soluciones ecológicas y alimenticias a partir del coco, transformando tanto sus subproductos como su fruto en productos innovadores, seguros y ambientalmente responsables. Operamos bajo principios legales, sanitarios y de sostenibilidad, impulsando cadenas de valor locales y promoviendo un modelo empresarial circular.
- 
-
+            En <strong>El Samba</strong> Desarrollar soluciones ecológicas y alimenticias a partir del coco, transformando tanto sus subproductos como su fruto en productos innovadores, seguros y ambientalmente responsables. Operamos bajo principios legales, sanitarios y de sostenibilidad, impulsando cadenas de valor locales y promoviendo un modelo empresarial circular.
           </p>
         </div>
         <div class="intro-image">
           <!-- REEMPLAZA ESTA URL CON LA IMAGEN DE TU EMPRESA -->
-          <img src="proyecto/img/Briquetas0.jpg" alt="Imagen representativa de Briquetas la Milagrito">
+          <img src="imagenes/Bloque fibra de coco.jpg" alt="Imagen representativa de Briquetas la Milagrito">
         </div>
       </div>
     </section>
@@ -74,13 +72,14 @@
     <section class="mision-vision">
       <div class="content-wrapper">
         <article class="bloque card">
-          <h2>Beneficios</h2>
-          <p>
-            Producir briquetas de carbón ecológicas 
-            que brinden una alternativa sostenible con 
-            una durabilidad en macroproduccion siente 
-            el calor de un buen asado con briquetas la milagrito
-          </p>
+          <h2>Para que se Puede Utilizar</h2>
+          <ul>
+  <li>Viveros y germinación de semillas</li>
+  <li>Producción agrícola y horticultura</li>
+  <li>Mejorar suelos degradados o pesados</li>
+  <li>Macetas, huertos urbanos y jardinería doméstica</li>
+</ul>
+
         </article>
         <!--<article class="bloque card">
           <h2>Visión</h2>
