--- a/4-Contactenos.Html
+++ b/4-Contactenos.Html
@@ -35,9 +35,9 @@
         Productos <i class="fas fa-chevron-down"></i>
     </a>
     <ul class="dropdown-menu">
-        <li><a href="1-Briqueta de 10kg.html">Briqueta de 10kg</a></li>
-        <li><a href="2-Carbon Vegetal 25kg.html">Carbón Vegetal 25kg</a></li>
-        <li><a href="3-Ferti Carbon.html">Ferti Carbon</a></li>
+        <li><a href="1-Briqueta de 10kg.html">Bloques de Fibra</a></li>
+        <li><a href="2-Carbon Vegetal 25kg.html">Sacos de fibra</a></li>
+        <li><a href="3-Ferti Carbon.html">Maceteras</a></li>
     </ul>
 </li>
         <!-- Fin del menú desplegable -->
@@ -91,7 +91,7 @@
 
   <!-- 🔸 PIE DE PÁGINA ======== -->
   <footer>
-    <p>&copy; 2025 Briquetas la Milagrito. Todos los derechos reservados.</p>
+    <p>&copy; 2026 EL SAMBA. Todos los derechos reservados.</p>
   </footer>
 
   <script src="script.js" defer></script>
