--- a/1-Briqueta de 10kg.html
+++ b/1-Briqueta de 10kg.html
@@ -126,7 +126,7 @@
 
   <!-- ======== PIE DE PÁGINA ======== -->
   <footer>
-    <p>&copy; 2025 Briquetas la Milagrito. Todos los derechos reservados.</p>
+    <p>&copy; 2026 EL SAMBA. Todos los derechos reservados.</p>
   </footer>
 
   <script src="script.js" defer></script>
