--- a/1-Quienes Somos.html
+++ b/1-Quienes Somos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Inicio | Briquetas la milagrito</title>
+  <title>Inicio | EL SAMBA </title>
   <link rel="stylesheet" href="styles.css" />
    <!--esto de aqui es para que salgan los link de las redes sociales-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -74,7 +74,7 @@
         </div>
         <div class="intro-image">
           <!-- REEMPLAZA ESTA URL CON LA IMAGEN DE TU EMPRESA -->
-          <img src="imagenes/Samba foto de perfil.jpg" alt="Imagen representativa de Briquetas la Milagrito">
+          <img src="imagenes/Samba foto de perfil.jpg" alt="Imagen representativa de el samba">
         </div>
       </div>
     </section>
