--- a/2-RSE.html
+++ b/2-RSE.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Inicio | Briquetas la milagrito</title>
+  <title>Inicio | EL SAMBA </title>
   <link rel="stylesheet" href="styles.css" />
    <!--esto de aqui es para que salgan los link de las redes sociales-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -66,7 +66,7 @@
         </div>
         <div class="intro-image">
           <!-- REEMPLAZA ESTA URL CON LA IMAGEN DE TU EMPRESA -->
-          <img src="imagenes/cocos germinando.jpg" alt="Imagen del Vivero La Milagrito, iniciativa de reforestación de Briquetas la Milagrito">
+          <img src="imagenes/cocos germinando.jpg" alt="Imagen del SAMBA , iniciativa de germinacion">
         </div>
       </div>
     </section>
@@ -86,7 +86,7 @@
 
   <!-- 🔸 PIE DE PÁGINA ======== -->
   <footer>
-    <p>&copy; 2025 Briquetas la Milagrito. Todos los derechos reservados.</p>
+    <p>&copy; 2025 EL SAMBA . Todos los derechos reservados.</p>
   </footer>
 
   <script src="script.js" defer></script>
